--- a/packages/web/css/components/responsivity.css
+++ b/packages/web/css/components/responsivity.css
@@ -1,3 +1,13 @@
+/* 
+####### 
+HEADER
+####### */
+@media (max-width: 1920px){
+  .nav a{
+    padding: 1rem 1.20rem;  
+  }
+}
+
 /* Footer Media */
 /* ### */
 /* ### */
